Corrected items layout, does not cut off row early. Able to see 4 items in each row.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,3 +28,13 @@ body {
 .mix-target {
   display: none;
 }
+
+#beer-titles {
+  text-align: center;
+}
+
+.thumbnail {
+  height: 500px;
+}
+
+
